--- a/README
+++ b/README
@@ -23,10 +23,18 @@ Installing ``chronograph`` is pretty simple.  First add it into ``INSTALLED_APPS
 in your ``settings.py`` file.  If you're running a version of Django older than
 revision 9739 (basically anything after 1.0 but before 1.1), then you'll need to
 add the following to your project's ``urls.py``::
-
+  
 	url(r'^admin/chronograph/job/(?P<pk>\d+)/run/$',
-		'chronograph.views.job_run', name="admin_chronograph_job_run")
+		'chronograph.views.job_run', name="admin_chronograph_job_run"),
 
+NOTE: make sure you place this *BEFORE* the root admin site include.  Your
+``urls.py`` should then look something like::
+
+  ...
+  url(r'^admin/chronograph/job/(?P<pk>\d+)/run/$',
+	  'chronograph.views.job_run', name="admin_chronograph_job_run"),
+  ('^admin/(.*)', admin.site.root),
+  ...
 
 After this run `syncdb``.  The only thing left to do is set up a periodic call to
 run the jobs.
